--- a/manifest.json
+++ b/manifest.json
@@ -7,11 +7,10 @@
       "service_worker": "background.js"
     },
     "action": {
-      "default_icon": "lux_rewards_logo.png",
-      "default_popup": "example.html"
+      "default_icon": "arrow.png"
     },
     "icons": {
-      "128": "lux_rewards_logo.png"
+      "128": "arrow128.png"
     },
     "permissions": [
       "activeTab",
@@ -21,10 +20,6 @@
       {
         "matches": [
           "<all_urls>"
-        ],
-        "resources": [
-          "closeicon.png",
-          "lux_rewards_logo.png"
         ]
       }
     ],
